# Rust

./: update.sh
3_and_5/: Cargo.toml
3_and_5/src/: main.rs
AimGame/: .gitignore  Cargo.toml
AimGame/src/: aim.rs  game.rs  main.rs
COS_Lab1/: Cargo.toml
COS_Lab2/: Cargo.toml
COS_Lab2/src/: main.rs
COS_Lab3/: Cargo.toml  vimsession.vim
COS_Lab3/src/: main.rs
COS_Lab4/: Cargo.toml  vimsession.vim
COS_Lab4/src/: main.rs
IOFS/lab1/: Cargo.toml  input.txt  v.vim
IOFS/lab2/: Cargo.toml  v.vim
MangaDb/: MangaDb.sln
MangaDb/MangaDb/: AddForm.Designer.cs  AddForm.cs  App.config  Conveyor.cs  Form1.Designer.cs  Form1.cs  MangaDb.csproj  Options.Designer.cs  Options.cs  Program.cs
MangaDb/Test/: Program.cs  Test.csproj
OnWorkProjects/: Factory.rs  add_assign.rs  index.rs  ptr.rs
RSA/: .gitignore  Cargo.toml
RSA/src/: main.rs
SAiMMod_Lab1/: Cargo.toml
SAiMMod_Lab1/src/: csbind.rs  histogram.rs  lib.rs  main.rs
SAiMMod_Lab1/tests/: lib.rs
SAiMMod_Lab3/: Cargo.toml  vims.vim
SAiMMod_Lab3/src/: main.rs
c_hack/: Cargo.toml
c_hack/src/: main.rs
client_server_app/client/: Cargo.toml
client_server_app/server/: Cargo.toml
csv_parser/: Cargo.toml  test.csv
csv_parser/src/: lib.rs
day4/: Cargo.toml
day4/src/: jagged_array.rs  main.rs  polynom.rs
enum_processes/: Cargo.toml
even_fibonacci_numbers/: Cargo.toml
game/game-client/: Cargo.toml
game/game-client/assets/: cube_120.glslv  cube_150.glslv
game/game-client/src/: main.rs
largest_prime_factor/: Cargo.toml
libs2/: Cargo.toml
manga_db/: Cargo.toml  v.vim
(+130 files in other folders)
