[package]
name = "game-client"
version = "0.1.0"
authors = ["AlexNav73 <fifthhorseman@mail.ru>"]

[[bin]]

name = "client"
path = "src/main.rs"

[dependencies]

piston_window = "0.6.1"
vecmath = "0.1.0"
camera_controllers = "0.2.0"
gfx = "0.6.4"
gfx_device_gl = "0.4.0"
pistoncore-sdl2_window = "0.2.0"

